<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/margin_15dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.fittrack.View.RegularFontTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/margin_5dp"
                android:text="@string/text_change_password"
                android:textColor="@color/color_border_black"
                android:textSize="@dimen/font_20sp" />

            <ImageView
                android:id="@+id/img_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/margin_15dp"
                android:padding="@dimen/margin_5dp"
                android:src="@drawable/ic_close_popup_gray" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1dp"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:background="@color/color_grey" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:layout_marginRight="@dimen/margin_15dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_weight="0.6"
        android:gravity="top"
        android:orientation="vertical">


        <com.fittrack.View.RegularFontEditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:background="@drawable/bg_round_corner_blue"
            android:drawableLeft="@drawable/ic_password_gray_register_screen"
            android:drawablePadding="@dimen/margin_10dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/text_old_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/margin_5dp"
            android:textColor="@color/color_grey"
            android:textColorHint="@color/color_grey"
            android:textSize="@dimen/font_12sp" />

        <com.fittrack.View.RegularFontEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:background="@drawable/bg_round_corner_blue"
            android:drawableLeft="@drawable/ic_password_gray_register_screen"
            android:drawablePadding="@dimen/margin_10dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/margin_5dp"
            android:textColor="@color/color_grey"
            android:textColorHint="@color/color_grey"
            android:textSize="@dimen/font_12sp" />

        <com.fittrack.View.RegularFontEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:background="@drawable/bg_round_corner_blue"
            android:drawableLeft="@drawable/ic_password_gray_register_screen"
            android:drawablePadding="@dimen/margin_10dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/text_confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/margin_5dp"
            android:textColor="@color/color_grey"
            android:textColorHint="@color/color_grey"
            android:textSize="@dimen/font_12sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-3dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginRight="-2dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/btn_gradiant_popup"
        android:gravity="center"
        android:orientation="horizontal">


        <com.fittrack.View.RegularFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:gravity="center"
            android:text="@string/text_done"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_20sp" />


    </LinearLayout>
</LinearLayout>





